# quantlab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md
.github/: PULL_REQUEST_TEMPLATE.md  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  good_first_issue.md
.github/workflows/: ci.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/api/: routes.py
backend/app/data/: sample_btc_usd.csv
backend/app/services/: __init__.py  backtester.py  binance.py  data_loader.py  indicators.py
backend/tests/: test_api.py  test_backtest.py  test_health.py  test_indicators.py
docs/: FRONTEND.md  GOOD_FIRST_ISSUES.md  SCREENSHOTS.md  WORK_PROGRESS.md
frontend/: .prettierignore  eslint.config.js  index.html  package-lock.json  package.json  tsconfig.node.json
frontend/src/: App.tsx  styles.css
frontend/src/api/: client.ts
frontend/src/backtest/: movingAverageCrossover.ts
frontend/src/components/: BacktestSummary.tsx  CandleChart.tsx  DataLoader.tsx  IndicatorPanel.tsx  TradeLog.tsx
frontend/src/data/: sample-ohlcv.json
frontend/src/indicators/: index.ts
frontend/src/tests/: App.test.tsx  backtest.test.ts  csv.test.ts  indicators.test.ts  setup.ts
frontend/src/utils/: csv.ts  types.ts
scripts/: setup-labels.sh
